# matrix

./: .gitignore  CMakeLists.txt  COMPLETE_FEATURE_LIST.md  FUNCTION_MODE.md  PLATFORMS.md  README.md  ROBUST_FEATURES.md  SUMMARY.md  TESTING_ROBUST.md  keymap_functions.c  keymap_functions.h  main.c  main_robust_example.c  matrix.c  matrix.h  matrix_robust.c  matrix_robust.h
stm32/: PIN_SELECTION_GUIDE.md  README_STM32.md  ROBUST_STM32.md  keymap_functions_stm32.c  keymap_functions_stm32.h  main_example_f401re.c  main_example_g0.c  main_robust_example_f401re.c  main_robust_example_g0.c  matrix_robust_stm32.c  matrix_robust_stm32.h  matrix_stm32.c  matrix_stm32.h
